--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -8,6 +8,7 @@
 # Ansible will use the key below
 ansible_ssh_private_key_file: "build-artifacts/consumer-edge-machine"
 ansible_ssh_common_args: "-F build-artifacts/ssh-config -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
+ansible_ssh_priv_key_secret: "ssh-priv-key-{{ cluster_name }}"
 #######
 
 ####
@@ -214,7 +215,9 @@ default_retry_count: 180
 default_retry_delay: 10
 
 provisioning_gsa_key: "{{ lookup('env', 'PROVISIONING_GSA_FILE') }}"
+provisioning_gsa_key_secret: "provisioning-gsa-{{ cluster_name }}"
 node_gsa_key: "{{ lookup('env', 'NODE_GSA_FILE') }}"
+node_gsa_key_secret: "node-gsa-{{ cluster_name }}"
 tools_base_path: "/var/google-tools-install"
 
 ## kubeconfig link directory and file (so all users can access kubeconfig and env KUBECONFIG set to this location/file)
