--- a/all-get-login-tokens.yml
+++ b/all-get-login-tokens.yml
@@ -2,9 +2,9 @@
 - hosts: workers
   gather_facts: false
   pre_tasks:
-  - name: Decrypt SSH key
+  - name: Download SSH key
     include_role:
-      name: decrypt-ssh-key
+      name: download-ssh-key
   - name: Gathering Facts
     setup: {}
     tags:
