--- a/all-post-install.yml
+++ b/all-post-install.yml
@@ -6,9 +6,9 @@
   become: true
   become_user: root
   pre_tasks:
-  - name: Decrypt SSH key
+  - name: Download SSH key
     include_role:
-      name: decrypt-ssh-key
+      name: download-ssh-key
   - name: Gathering Facts
     setup: {}
     tags:
