Setting NFS recover lost locks
Change-Id: I596ea98c04f5c3fcd3e2fe0311407e142f46e7c2

--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -257,3 +257,15 @@
   - (services['multipath-tools-boot.service'].status == 'enabled') or (services['multipath-tools-boot.service'].state == 'running')
   tags:
   - multipath-config
+
+- name: "Enable recover lost locks for NFS"
+  lineinfile:
+    path: "/etc/modprobe.d/nfs4-locks.conf"
+    line: "options nfs recover_lost_locks=1"
+    create: true
+  when:
+  - storage_provider == "robin"
+  tags:
+  - nfs-storage-robin
+  - robin-setup
+  - modprobe
