Added comments for creating a Fleet Workload Identity pool prior to registration of a cluster.
Change-Id: I112a9273391582f13e184a24b305cc3b17222703

--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -2,6 +2,11 @@
 ### This file runs after ExternalSecrets has been installed into the cluster
 ###
 
+###
+### Ideally this will be moved to TF in the future. Two APIs are in alpha stage of development,
+### one to create a fleet first, and another to create the fleet workload identity pool second.
+### Idea is that once those APIs are called, TF would perform the process below
+###
 - name: Setup Workload Identity for External Secrets
   run_once: true
   command:
