Added the API names to the comments for "Setup Workload Identity for External Secrets"
Change-Id: Ib7ce1adce47fb8688e8d75a77bf809047eed3ca5

--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -4,8 +4,9 @@
 
 ###
 ### Ideally this will be moved to TF in the future. Two APIs are in alpha stage of development,
-### one to create a fleet first, and another to create the fleet workload identity pool second.
-### Idea is that once those APIs are called, TF would perform the process below
+### projects.locations.fleets.create and projects.locations.global.memberships.initializeHub. The
+### first will create a fleet and the second will create the fleet workload identity pool.
+### Idea is that once those APIs are called, in that order, TF would perform the process below.
 ###
 - name: Setup Workload Identity for External Secrets
   run_once: true
