--- a/roles/download-ssh-key/tasks/main.yml
+++ b/roles/download-ssh-key/tasks/main.yml
@@ -1,10 +1,10 @@
 - name: Check if {{ ansible_ssh_private_key_file }} is in Secret Manager with secret {{ ansible_ssh_priv_key_secret }}
   become: false
-  delegate_to: localhost
+  ignore_errors: true
   shell: |
     export HAS_SECRET=$(gcloud secrets list --filter="name~{{ ansible_ssh_priv_key_secret }}" --format="value(name)" --project="{{ google_secret_project_id }}")
     if [ -z "$HAS_SECRET" ]; then
-      exit 1 
+      exit 1
     fi
   when:
     - primary_cluster_machine is defined
