Removing or commenting all run_once
Change-Id: I38f5990a38176eee2b79fb10e186e55c3761f751

--- a/roles/abm-install/tasks/main.yml
+++ b/roles/abm-install/tasks/main.yml
@@ -263,11 +263,13 @@
     - abm-check-membership
 
   - name: Make sure the GKE Hub membership exists
-    run_once: true
     command:
       cmd: gcloud container hub memberships describe {{ cluster_name }} --format="value(name)" --project {{ google_project_id }}
     environment:
       GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_keys_folder }}/provisioning-gsa.json"
+    when:
+    - primary_cluster_machine is defined
+    - primary_cluster_machine == True
     tags:
     - abm-install
     - abm-verify-install
