--- a/roles/google-tools/tasks/main.yml
+++ b/roles/google-tools/tasks/main.yml
@@ -205,8 +205,10 @@
       cmd: gcloud services enable {{ gcp_services_required | join(' ') }} --project={{ google_project_id }}
     run_once: true # only one in whole inventory to run this
     when:
-      - gcp_services_required is defined
-      - (gcp_services_required|length>0)
+    - gcp_services_required is defined
+    - (gcp_services_required|length>0)
+    - primary_cluster_machine is defined
+    - primary_cluster_machine == true
     tags:
     - initial-install
     - terraform
