--- a/roles/abm-software/tasks/acm-install.yaml
+++ b/roles/abm-software/tasks/acm-install.yaml
@@ -3,7 +3,7 @@
 - name: "Enable ACM API in GCP"
   command:
     cmd: gcloud beta container hub config-management enable
-  run_once: true # only needs to run once
+  run_once: true # fleet-wide operation, only needs to run once per instance run 
   when: "(primary_cluster_machine is defined) and (primary_cluster_machine == true)"
   environment:
     PATH: "{{ tools_base_path }}/google-cloud-sdk/bin:{{ ansible_env.PATH }}"
