--- a/roles/abm-install/vars/main.yml
+++ b/roles/abm-install/vars/main.yml
@@ -11,7 +11,7 @@ abm_install_user: "el-gato"
 # Cluster Configuration
 install_type: standalone
 multi_network_enabled: "{{ enable_multus_network | default('false', True) }}"
-enable_application_logging: true
+enable_application_logging: false # Recommend using the AddonConfig with Stackdriver object 
 dataplane_v2: false # primarily vSphere installs
 
 # Skip preflight checks?
