setting the sds folder structure for Longhorn data
Change-Id: I342c779d8030f128c87a8404d4506ba4e827dfa5

--- a/roles/abm-software/tasks/csi-longhorn.yaml
+++ b/roles/abm-software/tasks/csi-longhorn.yaml
@@ -70,7 +70,7 @@
 - name: Copy Longhorn namespace and configmap
   template:
     src: longhorn-default-setting.yml.j2
-    dest: "{{ acm_config_files }}/longhorn-default-setting.yml"
+    dest: "{{ sds_config_files }}/longhorn-default-setting.yml"
   when:
   - (primary_cluster_machine is defined)
   - (primary_cluster_machine == true)
@@ -80,7 +80,7 @@
 
 - name: Create Longhorn namespace and configmap
   command:
-    cmd: kubectl apply -f {{ acm_config_files }}/longhorn-default-setting.yml
+    cmd: kubectl apply -f {{ sds_config_files }}/longhorn-default-setting.yml
   when:
   - (primary_cluster_machine is defined)
   - (primary_cluster_machine == true)
